# TabNado

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build-container.yml  deploy-docs.yml  python-tests.yml
api/overview/: index.html
cli/: index.html
configuration/: index.html
docs/: cli.md  configuration.md  index.md  installation.md  outputs.md  pipeline.md  quick_start.md
docs/api/: overview.md
installation/: index.html
outputs/: index.html
pipeline/: index.html
quick_start/: index.html
search/: search_index.json
tabnado/: __init__.py  api.py  catboost_shap.py  catboost_sweep.py  catboost_train.py  cli.py  data.py  evaluate.py  gandalf_shap.py  gandalf_sweep.py  gandalf_train.py  init.py  params.py  shap.py  shap_utils.py  sweep.py  tasks.py  train.py  utils.py  wandb.py  xgb_shap.py  xgb_sweep.py  xgb_train.py
tests/: __init__.py  conftest.py  make_test_dataset.py  test_catboost_shap.py  test_catboost_sweep.py  test_cli.py  test_evaluate_roc.py  test_gandalf_config.py  test_peaks.py  test_pipeline_gandalf.py  test_pipeline_xgboost.py  test_shap_classification.py  test_sweep.py  test_wandb_config.py
tests/data/: params_gandalf_test.yaml  params_test.yaml  params_test_xgboost.yaml  test_anno.gtf  test_peaks.bed
tests/integration/: test_peaks.py  test_pipeline_gandalf.py  test_pipeline_xgboost.py
tests/unit/: test_api.py  test_cli.py  test_evaluate_roc.py  test_params.py  test_shap.py  test_sweep.py  test_train.py  test_utils.py  test_wandb_config.py
