[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "TabNado"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "einops==0.8.2",
    "llvmlite==0.43.0",
    "loguru==0.7.3",
    "omegaconf==2.3.0",
    "scikit-base==0.13.1",
    "matplotlib==3.10.8",
    "numba==0.60.0",
    "numpy==2.0.2",
    "pandas",
    "pyranges1==1.3.5",
    "pyyaml",
    "quantnado @ git+https://github.com/Milne-Group/QuantNado.git@develop",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "shap==0.51.0",
    "torch==2.10.0",
    "pytorch-lightning>=2.0.0,<2.7.0",
    "torchmetrics>=0.10.0,<1.9.0",
    "umap-learn==0.5.11",
    "tensorboard",
    "wandb==0.25.1",
    "xgboost>=2.0.0",
    "joblib",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5",
]
test = [
    "pytest>=8.0",
    "pytest-xdist",
    "pre-commit",
]

[project.scripts]
tabnado-init = "tabnado.init:main"
tabnado-run = "tabnado.cli:run"
tabnado-data = "tabnado.cli:data"
tabnado-sweep = "tabnado.cli:sweep"
tabnado-train = "tabnado.cli:train"
tabnado-evaluate = "tabnado.cli:evaluate"
tabnado-shap = "tabnado.cli:shap"

[tool.setuptools.packages.find]
where = ["."]
include = ["tabnado*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-vv -s --basetemp=test_output"

[tool.uv.sources]
quantnado = { git = "https://github.com/Milne-Group/QuantNado.git", branch = "develop" }
