[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel",
    "setuptools_scm[toml]>=10.0.5",
]
build-backend = "setuptools.build_meta"

[project]
name = "tabnado"
version = "0.0.1"
requires-python = ">=3.12,<3.13"
dependencies = [
    "einops==0.8.2",
    "llvmlite==0.47.0",
    "loguru==0.7.3",
    "omegaconf==2.3.0",
    "optuna>=4,<5",
    "scikit-base==1.0.0",
    "matplotlib>=3.10,<4",
    "numba==0.65.1",
    "numpy>=2,<=2.2.6",
    "pandas>=2,<3.0.3",
    "pyranges1==1.3.8",
    "pyyaml",
    "quantnado>=0.4.4",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "shap>=0.52.0",
    "torch==2.11.0",
    "pytorch-lightning>=2.0.0,<2.7.0",
    "pytorch-tabular==1.2.0",
    "torchmetrics>=0.10.0,<1.9.0",
    "umap-learn==0.5.12",
    "tensorboard",
    "wandb==0.26.1",
    "wandb-workspaces==0.3.9",
    "catboost>=1.2.5",
    "imbalanced-learn>=0.14",
    "xgboost>=2.0.0",
    "joblib",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5",
]
test = [
    "pytest>=9.0.3",
    "pytest-xdist",
    "pre-commit",
]

[project.scripts]
tabnado-init = "tabnado.cli:init"
tabnado-run = "tabnado.cli:run"
tabnado-data = "tabnado.cli:data"
tabnado-sweep = "tabnado.cli:sweep"
tabnado-train = "tabnado.cli:train"
tabnado-evaluate = "tabnado.cli:evaluate"
tabnado-shap = "tabnado.cli:shap"

[tool.setuptools.packages.find]
where = ["."]
include = ["tabnado*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-vv -s --basetemp=test_output"

[tool.uv.sources]
quantnado = { git = "https://github.com/Milne-Group/QuantNado.git", branch = "develop" }
